tests/jastadd/negative/type_errors/L2/4_TypeCheckingForStmt5.ob
MODULE TestModule;
    VAR j : INTEGER;
BEGIN
	FOR j := 1 TO 2<3 DO
	END
END TestModule.
